Changelog
=========

8.0-dev - (unreleased)
----------------------
* Change: removed versions macro; now using viewlet
  [simiamih refs #17321]

7.9 - (2013-11-20)
------------------
* Feature: added ITemporalCoverageAdapter which is an adapter than can be
  overriden in order to return a temporalCoverage value
  [ichimdav refs #16719 and #17306]
* Feature: added styling for the geographical and temporal viewlets
  [ichimdav refs #16719]

7.8 - (2013-11-01)
------------------
* Change: sort by getObjPositionInParent the Data Files within dataset_view
  [ichimdav refs #17335]

7.7 - (2013-10-22)
------------------
* Feature: Added quick-upload portlets upgrade step
  [tiberich #16997]
* Bug fix: also implement Products.ATContentTypes.interfaces.IFileContent for the
  EEAFigureFile and DataFile objects
  [tiberich #16997]

7.6 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  [ichimdav refs #15651]
* Change: Added portal_url definition to the tooltip macro in order for it to
  be used by templates that are not dataset_view
  [ichimdav #16719]
* Bug fix: Fixed Organisation's vocabulary for organisations with non-ascii title
  [voineali refs #16804]

7.5 - (2013-09-23)
------------------
* Bug fix: fixed sorting for show last version facetnav widget
  [ghicaale refs #16784]

7.4 - (2013-09-19)
------------------
* Bug fix: optimised facetnav widget which filter for last version not to take minutes
  to compute the results as we now have all objects versionable.
  [ghicaale refs #16772]

7.3 - (2013-09-06)
------------------
* Feature: Handle "match all/any" option for anonymous users within geocoverage
  custom faceted widget
  [voineali refs #16624]
* Bug fix: Removed hardcoded AND operator within geocoverage
  facetednavigation widget
  [voineali refs #16624]
* Change: Moved temporalCoverage field/widget helpers to eea.forms in order
  to easily be reused by other packages like eea.soercontent